--- a/styles/contact.css
+++ b/styles/contact.css
@@ -11,8 +11,8 @@ body {
   position: fixed;
   width: 100%;
   z-index: 10;
-  color: rgb(141, 141, 141);
-  box-shadow: 0 5px 6px rgba(255, 255, 255, 0.13);
+  color: rgb(187, 187, 187);
+  box-shadow: 0 5px 6px rgba(255, 255, 255, 0.068);
   top: 0%;
   left: 0%;
   background-size: 100%;
@@ -25,6 +25,9 @@ body {
   font-size: 35px;
   letter-spacing: 3px;
   padding: 10px;
+}
+.red-o {
+  color: red;
 }
 .menu {
   width: 30%;
@@ -101,6 +104,9 @@ a:hover {
   text-align: center;
   font-size: 150%;
   color: rgba(65, 96, 114, 0.692);
+}
+.vklass {
+  width: 13%;
 }
 a:hover {
   color: darkslateblue;
